[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradium"
dynamic = ["version"]
description = "Python client for Gradium API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gradium AI", email = "contact@gradium.ai" }]
keywords = ["gradium", "voice", "ai", "tts", "stt", "api", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["aiohttp>=3.8.0", "numpy>=1.20.0"]

[project.scripts]
gradium = "gradium.cli:main"

[project.urls]
Homepage = "https://gradium.ai"
Repository = "https://github.com/gradium/gradium-py"
"Bug Tracker" = "https://github.com/gradium/gradium-py/issues"
Documentation = "https://docs.gradium.ai"

[project.optional-dependencies]
cli = ["sphn"]
dev = ["black", "ruff", "mypy", "pytest", "pytest-asyncio"]


[tool.black]
line-length = 80
target-version = ["py310"]

[tool.ruff]
line-length = 80
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "T20"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["gradium"]

[tool.hatch.version]
path = "gradium/version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
